plugins/kotlin/idea/tests/testData/multiplatform/platformDependencyInCommon/js/js.kt
fun checkCloneableIsAbsent(array: Array<String>) {
    array.<!UNRESOLVED_REFERENCE!>clone<!>()
}

fun checkSynchronizedIsDeprecatedInJs() {
    <!DEPRECATION_ERROR!>synchronized<!>(Any()) {
    }
}
